--- a/package.json
+++ b/package.json
@@ -60,6 +60,9 @@
     "tsconfig-paths": "^4.0.0",
     "typescript": "^4.7.4"
   },
+  "overrides": {
+    "xml2js": "^0.5.0"
+  },
   "jest": {
     "moduleFileExtensions": [
       "js",
